# Hive

./: .gitignore  README.md  backlog.md  install.ps1  install.sh  pyproject.toml  python-cli-setup-prompt.md
.github/workflows/: release.yaml  test.yaml
memory/: MEMORY.md  mcp_tasks.md  project_hive.md  user_profile.md
src/hive/: __init__.py  agent.py  ai.py  commands.py  i18n.py  log.py  main.py  mcp.py  summarizer.py  user.py  workspace.py
src/hive/agents/: __init__.py
src/hive/ui/: app.py  history.py  panels.py
tests/: conftest.py  test_agent.py  test_ai.py  test_commands.py  test_history.py  test_i18n.py  test_main.py  test_mcp.py  test_panels.py  test_summarizer.py  test_ui.py  test_user.py  test_workspace.py
