[build-system]
requires = ["setuptools >= 77.0.03"]
build-backend = "setuptools.build_meta"

[project]
name = "hive"
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
    "prompt_toolkit",
    "rich",
    "platformdirs"
]

[project.scripts]
hive = "hive.main:run"

[project.optional-dependencies]
build = ["pyinstaller"]
test = ["pytest", "ruff"]
dev = ["bump-my-version", "ruff"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "hive.__version__"}

[tool.bumpversion]
current_version = "0.3.1"
commit = true
tag = true
tag_name = "v{new_version}"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[[tool.bumpversion.files]]
filename = "src/hive/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

